--- a/signupt.html
+++ b/signupt.html
@@ -121,20 +121,20 @@
 
     <form method="GET" name="signup" >
     <div>
-        <input type="text" id="name" placeholder="Enter your name" onblur="nameValidator(this)"> </input>
+        <input type="text" id="name" placeholder="Enter your name" onblur="nameValidator(this)">
     </div>
     <div id = "Wrong Name">
     </div>
     <br>
     <div>
-        <input type="email" id="email" placeholder="Enter your Email" onblur="emailValidator(this)"> </input>
+        <input type="email" id="email" placeholder="Enter your Email" onblur="emailValidator(this)">
     </div>
     <div id="Wrong Email">
 
     </div>
     <br>
     <div>
-        <input type="text" id="mobile num" placeholder="Enter your Mobile Number" onblur="numberValidator(this)"> </input>
+        <input type="text" id="mobile num" placeholder="Enter your Mobile Number" onblur="numberValidator(this)">
     </div>
     <div id="Wrong Number">
 
@@ -142,14 +142,14 @@
     <br>
 
     <div>
-        <input type="password" id="pass" placeholder="Enter your Password" onblur="passwordValidator(this)"> </input>
+        <input type="password" id="pass" placeholder="Enter your Password" onblur="passwordValidator(this)">
     </div>
     <div id="Wrong Password">
 
     </div>
     <br>
     <div>
-        <input type="password" id="cpass"placeholder="Confirm your paassword" onblur="passwordMatcher(this)"> </input>
+        <input type="password" id="cpass"placeholder="Confirm your paassword" onblur="passwordMatcher(this)">
     </div>
     <div id="Password Not Match">
 
@@ -437,7 +437,7 @@
     <div id="coords"></div>
     <textarea rows ="5" cols="100" placeholder="Additional Information"></textarea>
     <br>
-    <input type="submit" value="SUBMIT"> </input>
+    <input type="submit" value="SUBMIT">
     </form>
     <script src="script.js">
     </script>
