--- a/signupt.html
+++ b/signupt.html
@@ -156,13 +156,13 @@
     </div>
     <br>
 
-    <input type="radio" name="gender" required>  Male</input> <br>
-    <input type="radio" name="gender" required>Female</input><br>
+    <input type="radio" name="gender" required>Male<br>
+    <input type="radio" name="gender" required>Female<br>
     Please Select your hobbies(Select at least one)
     <br>
-    <input type="checkbox" name="hobby" checked onclick="checkNumOfBox(this)"> Reading </input>&nbsp;
-    <input type="checkbox" name="hobby" onclick="checkNumOfBox(this)"> Singing </input>&nbsp;
-    <input type="checkbox" name="hobby" onclick="checkNumOfBox(this)"> Writing </input>&nbsp;
+    <input type="checkbox" name="hobby" checked onclick="checkNumOfBox(this)"> Reading &nbsp;
+    <input type="checkbox" name="hobby" onclick="checkNumOfBox(this)"> Singing &nbsp;
+    <input type="checkbox" name="hobby" onclick="checkNumOfBox(this)"> Writing &nbsp;
     <br>
 
     <input type ="text" id="AddressLine1" placeholder="Address Line 1" onblur="addressValidate(this)">
